WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34237
Huge plain text pastes are slow
https://bugs.webkit.org/show_bug.cgi?id=34237
Summary
Huge plain text pastes are slow
Enrica Casucci
Reported
2010-01-27 19:34:04 PST
The performance of plain text pastes is highly non-linear.
Attachments
Patch
(7.12 KB, patch)
2010-01-27 20:04 PST
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch2
(7.11 KB, patch)
2010-01-27 21:07 PST
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
Patch3
(7.23 KB, patch)
2010-01-28 14:30 PST
,
Enrica Casucci
mjs
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-01-27 20:03:15 PST
<
rdar://problem/5195056
>
Enrica Casucci
Comment 2
2010-01-27 20:04:54 PST
Created
attachment 47586
[details]
Patch
WebKit Review Bot
Comment 3
2010-01-27 20:12:21 PST
Attachment 47586
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] WebKit/mac/ChangeLog:12: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 4
2010-01-27 21:07:24 PST
Created
attachment 47589
[details]
Patch2 Stripping unwanted tabs from ChangeLog files.
Maciej Stachowiak
Comment 5
2010-01-28 03:38:41 PST
Comment on
attachment 47589
[details]
Patch2 I'm concerned about the Mail-specific workaround. Is that something Mail needs to keep doing? Can we get them to change? If so, that special case should probably have a version check.The WebCore part of the speedup looks good to me (and is an awesome idea).
Enrica Casucci
Comment 6
2010-01-28 09:02:33 PST
(In reply to
comment #5
)
> (From update of
attachment 47589
[details]
) > I'm concerned about the Mail-specific workaround. Is that something Mail needs > to keep doing? Can we get them to change? If so, that special case should > probably have a version check.The WebCore part of the speedup looks good to me > (and is an awesome idea).
I agree with you. I've been talking to mail about this and they seem ok with fixing it for the next version. I should probably change the code to do the workaround only up to the current version. Any thoughts?
Maciej Stachowiak
Comment 7
2010-01-28 13:20:03 PST
(In reply to
comment #6
)
> (In reply to
comment #5
) > > (From update of
attachment 47589
[details]
[details]) > > I'm concerned about the Mail-specific workaround. Is that something Mail needs > > to keep doing? Can we get them to change? If so, that special case should > > probably have a version check.The WebCore part of the speedup looks good to me > > (and is an awesome idea). > > I agree with you. I've been talking to mail about this and they seem ok with > fixing it for the next version. > I should probably change the code to do the workaround only up to the current > version. > Any thoughts?
I think that's a good idea. We usually use a linked on-or-after check for things like that.
Enrica Casucci
Comment 8
2010-01-28 14:30:34 PST
Created
attachment 47648
[details]
Patch3 Limiting the OS versions for the workaround.
Maciej Stachowiak
Comment 9
2010-01-28 17:30:10 PST
Comment on
attachment 47648
[details]
Patch3 r=me
Enrica Casucci
Comment 10
2010-01-28 18:16:39 PST
Committed revision 54036.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug